--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.7",
     "typescript": "^5.5.4"
   }
 }
